# scripts

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Realtime_Voice_Changer_on_Colab.ipynb  anki_mathjax.py  bitcoin.py  bypass.py  download_bitcoin.py  generate_anki.py  habitica_farm.py  key_presser.py  mining_text.py  pyproject.toml  run_selection.vbs  selection_process.py  tabernaculo.py  table_print.py  video2text.py  weather.py
.github/workflows/: build-windows.yml
.sisyphus/: boulder.json
.sisyphus/notepads/liderbpo-rating/: issues.md  learnings.md
.sisyphus/plans/: liderbpo-rating.md  playwright-bundled.md
.windsurf/rules/: python-rules.md
docs/: TASKSCHEDULER_SETUP.md
scripts/: bitcoin.py  contas_congregacao.py  habitica_farm.py  install_extensions.py  key_presser.py  selection_process.py  tabernaculo.py  table_print.py
scripts/personal/: anki_mathjax.py  bitcoin.py
scripts/work/: build.sh  build_windows.ps1  rating_lider.py
tests/: test_contas_congregacao.py  test_rating_lider.py  test_selection_process.py
utils/: updater.py
